crates/autoresolve_macros_impl/src/snapshots/autoresolve_macros_impl__base__tests__primary_base_all_regular.snap
---
source: crates/autoresolve_macros_impl/src/base.rs
expression: pretty_print(result)
---
struct Base {
    scheduler: Scheduler,
    clock: Clock,
}
#[doc(hidden)]
pub mod base_helper {
    use super::*;
    #[doc(hidden)]
    pub type Base_Part0_Scheduler = Scheduler;
    #[doc(hidden)]
    pub type Base_Part1_Clock = Clock;
    #[doc(hidden)]
    #[macro_export]
    macro_rules! __autoresolve_gen_base_helper {
        ([$($helper:tt)*], $mangled:ident, $dollar:tt) => {
            #[doc(hidden)] #[macro_export] macro_rules! $mangled { (@ impls $dollar base
            : path) => { impl ::autoresolve::ResolveFrom < $dollar base > for $($helper)*
            ::Base_Part0_Scheduler { type Inputs = ::autoresolve::ResolutionDepsEnd; fn
            new(_ : ::autoresolve::ResolutionDepsEnd) -> Self {
            unreachable!("root types are pre-inserted into the resolver") } } impl
            ::autoresolve::ResolveFrom < $dollar base > for $($helper)*
            ::Base_Part1_Clock { type Inputs = ::autoresolve::ResolutionDepsEnd; fn new(_
            : ::autoresolve::ResolutionDepsEnd) -> Self {
            unreachable!("root types are pre-inserted into the resolver") } } }; (@
            insert $dollar store : ident, $dollar name : ident) => { $dollar store
            .store_value($dollar name.scheduler); $dollar store.store_value($dollar name
            .clock); }; (@ reexport[$dollar ($dollar new_helper : tt) *], $dollar
            new_mangled : ident, $dollar dd : tt) => { pub use
            $crate::base_helper::Base_Part0_Scheduler; pub use
            $crate::base_helper::Base_Part1_Clock; pub use
            $crate::base_helper::__generator; $crate::base_helper::__generator!([$dollar
            ($dollar new_helper) *], $dollar new_mangled, $dollar dd); }; }
        };
    }
    #[doc(hidden)]
    pub use __autoresolve_gen_base_helper as __generator;
    __generator!([crate ::base_helper], __autoresolve_base_helper, $);
    #[doc(hidden)]
    pub use __autoresolve_base_helper as Base;
}
#[doc(hidden)]
pub use base_helper::Base;
Base!(@ impls Base);
impl ::autoresolve::BaseType for Base {
    type Parent = ();
    fn insert_into(self, __store: &mut impl ::autoresolve::ResolverStore<Base>) {
        let Self { scheduler, clock } = self;
        __store.store_value(scheduler);
        __store.store_value(clock);
    }
}
const _: fn() = || {
    _ = std::mem::size_of::<base_helper::Base_Part0_Scheduler>();
    _ = std::mem::size_of::<base_helper::Base_Part1_Clock>();
};
