crates/autoresolve_macros_impl/src/snapshots/autoresolve_macros_impl__base__tests__primary_base_with_spread_and_regular.snap
---
source: crates/autoresolve_macros_impl/src/base.rs
expression: pretty_print(result)
---
struct Base {
    builtins: Builtins,
    telemetry: Telemetry,
}
Builtins!(@ impls Base);
impl ::autoresolve::ResolveFrom<Base> for Telemetry {
    type Inputs = ::autoresolve::ResolutionDepsEnd;
    fn new(_: ::autoresolve::ResolutionDepsEnd) -> Self {
        unreachable!("base types are pre-inserted into the resolver")
    }
}
impl ::autoresolve::BaseType<Base> for Base {
    fn insert_into(self, __store: &mut impl ::autoresolve::ResolverStore<Base>) {
        let Self { builtins, telemetry } = self;
        Builtins!(@ insert __store, builtins);
        __store.store_value(telemetry);
    }
}
