crates/autoresolve_macros_impl/src/snapshots/autoresolve_macros_impl__base__tests__scoped_base.snap
---
source: crates/autoresolve_macros_impl/src/base.rs
expression: pretty_print(result)
---
mod scoped_mod {
    struct ScopedRoots {
        request_context: RequestContext,
    }
    #[doc(hidden)]
    pub(crate) use RequestContext as __Part0;
    #[allow(unused_imports)]
    pub(crate) use RequestContext as RequestContext;
    impl ::autoresolve::ResolveFrom<ScopedRoots> for RequestContext {
        type Inputs = ::autoresolve::ResolutionDepsEnd;
        fn new(_: ::autoresolve::ResolutionDepsEnd) -> Self {
            unreachable!("scoped root types are inserted by BaseType::insert_into")
        }
    }
    #[doc(hidden)]
    pub(crate) use super::base_mod as __parent;
    #[doc(hidden)]
    #[macro_export]
    macro_rules! __autoresolve_scoped_mod {
        (@ impls $base:path, $($self_mod:tt)*) => {
            $($self_mod)* ::__parent::Base!(@ impls $base, $($self_mod)* ::__parent);
            impl ::autoresolve::ResolveFrom < $base > for $($self_mod)* ::__Part0 { type
            Inputs = ::autoresolve::ResolutionDepsEnd; fn new(_ :
            ::autoresolve::ResolutionDepsEnd) -> Self {
            unreachable!("root types are pre-inserted into the resolver") } }
        };
        (@ insert $store:ident, $name:ident, $($self_mod:tt)*) => {
            $store .store_value($name .request_context);
        };
    }
    #[doc(hidden)]
    pub use __autoresolve_scoped_mod as ScopedRoots;
}
impl ::autoresolve::ScopedUnder for scoped_mod::ScopedRoots {
    type Parent = base_mod::Base;
}
base_mod::Base!(@ impls scoped_mod::ScopedRoots, base_mod);
impl ::autoresolve::BaseType<scoped_mod::ScopedRoots> for scoped_mod::ScopedRoots {
    fn insert_into(
        self,
        __store: &mut impl ::autoresolve::ResolverStore<scoped_mod::ScopedRoots>,
    ) {
        let Self { request_context } = self;
        __store.store_value(request_context);
    }
}
const _: fn() = || {
    _ = std::mem::size_of::<scoped_mod::__Part0>();
};
