crates/autoresolve_macros_impl/src/snapshots/autoresolve_macros_impl__base__tests__scoped_base_with_spread.snap
---
source: crates/autoresolve_macros_impl/src/base.rs
expression: pretty_print(result)
---
struct ScopedRoots {
    builtins: Builtins,
    request_context: RequestContext,
}
#[doc(hidden)]
pub mod scoped_helper {
    use super::*;
    pub use super::Base;
    #[doc(hidden)]
    pub type ScopedRoots_Part0_RequestContext = RequestContext;
    #[doc(hidden)]
    #[macro_export]
    macro_rules! __autoresolve_gen_scoped_helper {
        ([$($helper:tt)*], $mangled:ident, $dollar:tt) => {
            #[doc(hidden)] #[macro_export] macro_rules! $mangled { (@ impls $dollar base
            : path) => { $($helper)* ::Base!(@ impls $dollar base); Builtins!(@ impls
            $dollar base); impl ::autoresolve::ResolveFrom < $dollar base > for
            $($helper)* ::ScopedRoots_Part0_RequestContext { type Inputs =
            ::autoresolve::ResolutionDepsEnd; fn new(_ :
            ::autoresolve::ResolutionDepsEnd) -> Self {
            unreachable!("root types are pre-inserted into the resolver") } } }; (@
            insert $dollar store : ident, $dollar name : ident) => { { let __spread =
            $dollar name.builtins; Builtins!(@ insert $dollar store, __spread); } $dollar
            store.store_value($dollar name.request_context); }; (@ reexport[$dollar
            ($dollar new_helper : tt) *], $dollar new_mangled : ident, $dollar dd : tt)
            => { pub use $crate::scoped_helper::ScopedRoots_Part0_RequestContext; pub use
            $crate::scoped_helper::__generator; pub use $crate::scoped_helper::Base;
            $crate::scoped_helper::__generator!([$dollar ($dollar new_helper) *], $dollar
            new_mangled, $dollar dd); }; }
        };
    }
    #[doc(hidden)]
    pub use __autoresolve_gen_scoped_helper as __generator;
    __generator!([crate ::scoped_helper], __autoresolve_scoped_helper, $);
    #[doc(hidden)]
    pub use __autoresolve_scoped_helper as ScopedRoots;
}
#[doc(hidden)]
pub use scoped_helper::ScopedRoots;
ScopedRoots!(@ impls ScopedRoots);
impl ::autoresolve::BaseType for ScopedRoots {
    type Parent = Base;
    fn insert_into(self, __store: &mut impl ::autoresolve::ResolverStore<ScopedRoots>) {
        let Self { builtins, request_context } = self;
        Builtins!(@ insert __store, builtins);
        __store.store_value(request_context);
    }
}
const _: fn() = || {
    _ = std::mem::size_of::<scoped_helper::ScopedRoots_Part0_RequestContext>();
};
